# crew-ai-practice

./: README.md
article_researcher/: pyproject.toml
article_researcher/src/article_researcher/: main.py
article_researcher/src/article_researcher/config/: tasks.yaml
automate_event_planning/: .env.example  README.md  pyproject.toml
automate_event_planning/src/automate_event_planning/: crew.py  main.py
automate_event_planning/src/automate_event_planning/config/: agents.yaml  tasks.yaml
estimate_project_planning/: .env.example  README.md  pyproject.toml
estimate_project_planning/src/estimate_project_planning/: crew.py  main.py
estimate_project_planning/src/estimate_project_planning/config/: agents.yaml  tasks.yaml
multi_agent_customer_support/: .env.example.env  .gitignore  README.md  pyproject.toml
multi_agent_customer_support/src/multi_agent_customer_support/: crew.py  main.py
multi_agent_customer_support/src/multi_agent_customer_support/config/: agents.yaml  tasks.yaml
multi_agent_financial_analysis/: .gitignore  README.md  pyproject.toml
multi_agent_financial_analysis/src/multi_agent_financial_analysis/: crew.py  main.py
multi_agent_financial_analysis/src/multi_agent_financial_analysis/config/: agents.yaml  tasks.yaml
src/article_researcher/: crew.py  main.py
src/article_researcher/config/: agents.yaml
tailor_job_applications/: .gitignore  README.md  fake_resume.md  pyproject.toml
tailor_job_applications/src/tailor_job_applications/: crew.py  main.py
tailor_job_applications/src/tailor_job_applications/config/: agents.yaml  tasks.yaml
tools_for_customer_outreach_campaign/: README.md  pyproject.toml
tools_for_customer_outreach_campaign/instructions/: customer_engagement_guide_for_small_businesses.txt  personalised_outreach_instructions_for_tech_startups.txt.txt  strategic_and_innovative_framework_for_enterprise_solutions.txt
tools_for_customer_outreach_campaign/src/tools_for_customer_outreach_campaign/: crew.py  main.py
tools_for_customer_outreach_campaign/src/tools_for_customer_outreach_campaign/config/: agents.yaml  tasks.yaml
tools_for_customer_outreach_campaign/src/tools_for_customer_outreach_campaign/tools/: sentiment_analysis_tool.py
