[project]
name = "article_researcher"
version = "0.1.0"
description = "article-researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
article_researcher = "article_researcher.main:run"
run_crew = "article_researcher.main:run"
train = "article_researcher.main:train"
replay = "article_researcher.main:replay"
test = "article_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
