[project]
name = "estimate_project_planning"
version = "0.1.0"
description = "estimate_project_planning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
estimate_project_planning = "estimate_project_planning.main:run"
run_crew = "estimate_project_planning.main:run"
train = "estimate_project_planning.main:train"
replay = "estimate_project_planning.main:replay"
test = "estimate_project_planning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
