[project]
name = "multi_agent_customer_support"
version = "0.1.0"
description = "multi_agent_customer_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
]

[project.scripts]
multi_agent_customer_support = "multi_agent_customer_support.main:run"
run_crew = "multi_agent_customer_support.main:run"
train = "multi_agent_customer_support.main:train"
replay = "multi_agent_customer_support.main:replay"
test = "multi_agent_customer_support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
