[project]
name = "tailor_job_applications"
version = "0.1.0"
description = "tailor_job_applications using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "ollama>=0.5.1",
]

[project.scripts]
tailor_job_applications = "tailor_job_applications.main:run"
run_crew = "tailor_job_applications.main:run"
train = "tailor_job_applications.main:train"
replay = "tailor_job_applications.main:replay"
test = "tailor_job_applications.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
