[project]
name = "tools_for_customer_outreach_campaign"
version = "0.1.0"
description = "tools_for_customer_outreach_campaign using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
tools_for_customer_outreach_campaign = "tools_for_customer_outreach_campaign.main:run"
run_crew = "tools_for_customer_outreach_campaign.main:run"
train = "tools_for_customer_outreach_campaign.main:train"
replay = "tools_for_customer_outreach_campaign.main:replay"
test = "tools_for_customer_outreach_campaign.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
